# file2ddl-rs

./: CLAUDE.md  CODE_REVIEW_GUIDE.md  Cargo.toml  Makefile  README.md  database_config_schema.md  design.md  example_db_config.json  plan.md
.claude/: settings.local.json
benches/: csv_parsing.rs  memory_profile.rs  type_inference.rs
docs/: PERFORMANCE.md  plan.md
src/: database.rs  lib.rs  main.rs
src/analyzer/: column.rs  diagnose.rs  inference.rs  mod.rs  optimized.rs  patterns.rs
src/cli/: mod.rs
src/ddl/: mod.rs
src/parser/: mod.rs  streaming.rs
src/perf/: mod.rs
src/types/: mod.rs
src/utils/: mod.rs
tests/: describe_integration_tests.rs  diagnose_integration_tests.rs  performance_regression.rs
tests/data/: bad_rows.csv  comprehensive.csv  diagnose_noheader.csv  diagnose_test.csv  error_inconsistent_delimiter_count.csv  newlines.csv  nulls.csv  pipe_delimited.txt  promotions.csv  quoted.csv  simple.csv  type_inference.csv
tests/integration/: mod.rs  parse_command.rs  test_parse.rs
