[package]
name = "file2ddl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
encoding_rs = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.10"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"
proptest = "1.0"
